# software-path-tracer

./: .gitignore  CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  renderer.cpp  renderer.h  scene.h  sphere.cpp  sphere.h  utils.h  vec3.h
demos/: emissive_demo.yaml  scene1.yaml  specular_demo.yaml
include/path_tracer/: benchmark.h  camera.h  renderer.h  scene.h  scene_loader.h  utils.h  vec3.h  yaml_parser.h
scenes/: emissive_demo.h
src/: interval.h  renderer.cpp
